--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Portifolio</a>
 
-
-<a href=""></a>
-
-
-    <script src="script.js"></script>
+        <div class="nav">
+            <a href="#home">Home</a>
+            <a href="#service">Service</a>
+            <a href="#portifolio">Portifolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+    </header>
 </body>
+<script src="script.js"></script>
 </html>
