--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio | dev_frank1br</title>
+    <!-- box-css -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- personal css -->
     <link rel="stylesheet" href="CSS/style.css">
     <script src="script.js"></script>
 </head>
@@ -19,6 +22,71 @@
             <a href="#about">About</a>
         </div>
     </header>
+
+    <!-- home section -->
+     <section class="home" id="home">
+        <div class="home-content">
+            <h3>Olá! Eu sou</h3>
+            <h1>Frank Oliveira</h1>
+            <h3>Full-Stack <span>Developer</span> </h3>
+
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat quia, debitis aliquid alias, delectus enim hic rerum quod explicabo harum a? 
+            </p>
+
+            <div class="social-media">
+                <a href="#">Linkedin <i class='bx bxl-linkedin-square' ></i> </a>
+                <a href="#">GitHub <i class='bx bxl-github'></i> </a>
+                <a href="#">Whatsapp <i class='bx bxl-whatsapp'></i> </a>
+            </div>
+        </div>
+
+        <div>
+            <a href="" class="btn">Donwload CV</a>
+    </div>
+
+    <div class="home-img">
+        <img src="" alt="Profile Picture">
+    </div>
+     </section>
+    <!-- /home section -->
+
+    <!-- service section -->
+     <section class="services" id="services">
+        <h2>Our <span>Services</span> </h2>
+
+        <div class="service-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt' ></i>
+                <h3>Front-end Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
+
+                <a href="" class="btn">Read More</a>
+            </div>
+        </div>
+
+        <div class="service-container">
+            <div class="services-box">
+                <i class='bx bx-code-curly' ></i>
+                <h3>Back-end Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
+
+                <a href="" class="btn">Read More</a>
+            </div>
+        </div>
+
+        <div class="service-container">
+            <div class="services-box">
+                <i class='bx bx-mobile-alt'></i>
+                <h3>Mobile Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
+
+                <a href="" class="btn">Read More</a>
+            </div>
+        </div>
+     </section>
+    <!-- /service section -->
 </body>
 <script src="script.js"></script>
 </html>
