--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@
         </div>
      </section>
     <!-- /portifolio section -->
+
+    <!--contact section  -->
+    <section class="contact" id="contact">
+        <h2> Contact <span>Me!</span></h2>
+
+        <form action="">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="E-mail">
+            </div>
+
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <textarea cols="30" rows="8" placeholder="Message"></textarea>
+            
+            <a href="" class="btn">Send Message</a>
+        </form>
+    </section>
+    <!--/contact section  -->
 </body>
 <script src="script.js"></script>
 </html>
