feat: about-me section structure

--- a/index.html
+++ b/index.html
@@ -151,11 +151,28 @@
             </div>
 
             <textarea cols="30" rows="8" placeholder="Message"></textarea>
-            
+
             <a href="" class="btn">Send Message</a>
         </form>
     </section>
     <!--/contact section  -->
+
+    <!-- about section -->
+     <div class="about" id="about">
+        <div class="about-img">
+            <img src="img/profile_picture.png" alt="About me">
+        </div>
+
+        <div class="about-content">
+            <h3>About me</h3>
+            <h1>Full-Stack <span>Developer</span></h1>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo animi enim, ex quidem nulla debitis rem perferendis quia error, voluptatem libero impedit voluptates ipsum. Error a, saepe sed voluptatibus quisquam animi rerum cum doloribus corrupti est explicabo. Quod beatae maxime mollitia minus magnam quas totam dolores asperiores voluptate nulla ea iure expedita magni quisquam dicta, commodi natus non blanditiis necessitatibus deserunt atque vel in! Amet excepturi animi unde expedita voluptas.</p>
+
+            <a href="" class="btn">Read More</a>
+        </div>
+     </div>
+    <!--/about section  -->
 </body>
 <script src="script.js"></script>
 </html>
