feat: footer structure

--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         </div>
      </div>
     <!--/about section  -->
+
+    <footer>
+        <p>CopyRight &copy; 2024 by &lt;/Frank Oliveira&gt;. All rights Reserved.</p>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
