--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="home-img">
-        <img src="img/profile_picture.png" alt="Profile Picture" width="10%" >
+        <img src="img/profile_picture.png" alt="Profile Picture" >
     </div>
      </section>
     <!-- /home section -->
