--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="nav">
             <a href="#home">Home</a>
-            <a href="#service">Service</a>
+            <a href="#services">Services</a>
             <a href="#portifolio">Portifolio</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
@@ -39,11 +39,11 @@
                 <a href="#">Linkedin <i class='bx bxl-linkedin-square' ></i> </a>
                 <a href="#">GitHub <i class='bx bxl-github'></i> </a>
                 <a href="#">Whatsapp <i class='bx bxl-whatsapp'></i> </a>
-            </div>
-        </div>
-
-        <div>
+            </div> <br>
             <a href="" class="btn">Donwload CV</a>
+        </div>
+        
+        <div>
     </div>
 
     <div class="home-img">
@@ -56,7 +56,7 @@
      <section class="services" id="services">
         <h2>Our <span>Services</span> </h2>
 
-        <div class="service-container">
+        <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Front-end Development</h3>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="service-container">
+        <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-curly' ></i>
                 <h3>Back-end Development</h3>
@@ -76,7 +76,7 @@
             </div>
         </div>
 
-        <div class="service-container">
+        <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-mobile-alt'></i>
                 <h3>Mobile Development</h3>
