--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <a href="#about">About</a>
         </div>
 
+        <div class="nav-responsive">
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#portifolio">Portifolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+
         <div class="menu-hamburger">
             <div class="bar1"></div>
             <div class="bar2"></div>
