--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#about">About</a>
         </div>
 
-        <div class="menu-hamburger">
+        <div class="menu-hamburguer">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
