feat, style, fix: responsive nav btns

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- personal css -->
     <link rel="stylesheet" href="CSS/style.css">
-    <script src="script.js"></script>
+    
 </head>
 <body>
     <header>
@@ -269,6 +269,7 @@
     <footer>
         <p>CopyRight &copy; 2024 by &lt;/Frank Oliveira&gt;. All rights Reserved.</p>
     </footer>
+
+    <script src="index.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
