--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h3>Front-end Development</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
 
-                <a href="" class="btn">Read More</a>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
         </div>
 
@@ -86,7 +86,7 @@
                 <h3>Back-end Development</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
 
-                <a href="" class="btn">Read More</a>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
         </div>
 
@@ -96,7 +96,7 @@
                 <h3>Mobile Development</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo porro repellat nam sed excepturi pariatur sapiente at natus, a dolor. Quidem ut illum numquam unde, reprehenderit dolor iure. Dolorem doloribus fugiat rerum dolorum laudantium, pariatur aliquid odit molestias esse vel.</p>
 
-                <a href="" class="btn">Read More</a>
+                <!-- <a href="" class="btn">Read More</a> -->
             </div>
         </div>
      </section>
@@ -261,7 +261,7 @@
 
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo animi enim, ex quidem nulla debitis rem perferendis quia error, voluptatem libero impedit voluptates ipsum. Error a, saepe sed voluptatibus quisquam animi rerum cum doloribus corrupti est explicabo. Quod beatae maxime mollitia minus magnam quas totam dolores asperiores voluptate nulla ea iure expedita magni quisquam dicta, commodi natus non blanditiis necessitatibus deserunt atque vel in! Amet excepturi animi unde expedita voluptas.</p>
 
-            <a href="" class="btn">Read More</a>
+            <!-- <a href="" class="btn">Read More</a> -->
         </div>
      </div>
     <!--/about section  -->
