--- a/index.html
+++ b/index.html
@@ -275,6 +275,6 @@
         <p>CopyRight &copy; 2024 by &lt;/Frank Oliveira&gt;. All rights Reserved.</p>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
