feat: new link for portifolio

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                 <div class="portifolio-layer">
                     <h4>Mobile Development</h4>
                     <p>Este projeto é um aplicativo desenvolvido em Flutter, com back-end em PHP e banco de dados gerenciado no MyPhpAdmin. O objetivo do app é facilitar a intermediação de vendas de produtos químicos para empresas, proporcionando uma plataforma segura e eficiente para conectar fornecedores e compradores do setor. A interface intuitiva permite que as empresas acessem uma variedade de produtos químicos, consultem preços e façam pedidos de forma prática, enquanto o sistema gerencia o fluxo de informações e pedidos para garantir uma experiência de compra otimizada.</p>
-                    <a href="#"><i class='bx bx-link-external' ></i> </a> 
-
-                    
+                    <a href="https://frank1br.github.io/jQuery-Project/"><i class='bx bx-link-external' ></i> </a> 
                 </div>
             </div>
 
