--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="portifolio-layer">
                     <h4>Web Development</h4>
                     <p>
-                        Este projeto é uma landing page desenvolvida com HTML5, CSS3, Bootstrap 5 e JavaScript, projetada para promover a academia fictícia "Strongest". O principal objetivo foi criar uma página responsiva e atrativa, com foco em apresentar informações sobre a academia, planos de assinatura, e localização, além de incluir funcionalidades interativas, como um carrossel de imagens e um formulário de contato funcional. O projeto destaca-se pela utilização de boas práticas de design e desenvolvimento web, oferecendo uma experiência fluida e adaptável a diferentes dispositivos, consolidando habilidades em tecnologias modernas e interfaces amigáveis ao usuário.
+                        Landing page desenvolvida com HTML5, CSS3, Bootstrap 5 e JavaScript para promover a academia fictícia "Strongest". O projeto apresenta informações sobre a academia, planos, localização, e inclui funcionalidades como carrossel de imagens e formulário de contato. Responsiva e atrativa, a página utiliza boas práticas de design e desenvolvimento, oferecendo uma experiência fluida e adaptável, consolidando habilidades em tecnologias modernas.
                     </p>
                     <a href="https://frank1br.github.io/projetoDesign/" target="_blank"><i class='bx bx-link-external' ></i> </a> 
 
