refac: resumed and shorted texts from projects

--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                 
                 <div class="portifolio-layer">
                     <h4>Mobile Development</h4>
-                    <p>Este projeto é um aplicativo desenvolvido em Flutter, com back-end em PHP e banco de dados gerenciado no MyPhpAdmin. O objetivo do app é facilitar a intermediação de vendas de produtos químicos para empresas, proporcionando uma plataforma segura e eficiente para conectar fornecedores e compradores do setor. A interface intuitiva permite que as empresas acessem uma variedade de produtos químicos, consultem preços e façam pedidos de forma prática, enquanto o sistema gerencia o fluxo de informações e pedidos para garantir uma experiência de compra otimizada.</p>
+                    <p>
+                        App em Flutter com back-end em PHP e banco de dados no MyPhpAdmin, criado para conectar fornecedores e compradores de produtos químicos. Oferece uma interface intuitiva para consultar preços, realizar pedidos e gerenciar informações, otimizando o processo de compra e venda no setor.
+                    </p>
                     <a href="https://frank1br.github.io/jQuery-Project/"><i class='bx bx-link-external' ></i> </a> 
                 </div>
             </div>
@@ -129,7 +131,8 @@
                 
                 <div class="portifolio-layer">
                     <h4>Web Development</h4>
-                    <p>Este projeto é uma aplicação web desenvolvida com HTML, CSS e jQuery, projetada para simular o sistema de caixa de uma loja de roupas. O objetivo principal foi criar uma interface intuitiva e funcional, permitindo a interação dinâmica com produtos e o cálculo automático do valor total de uma compra.
+                    <p>
+                        Aplicação web em HTML, CSS e jQuery que simula um sistema de caixa para lojas de roupas. Possui interface intuitiva, permitindo interação dinâmica com produtos e cálculo automático do valor total das compras.
                     </p>
                     <a href="https://github.com/Frank1br/jQuery-Project" target="_blank"><i class='bx bx-link-external' ></i> </a> 
 
@@ -144,7 +147,7 @@
                 <div class="portifolio-layer">
                     <h4>Web Development</h4>
                     <p>
-                        Landing page desenvolvida com HTML5, CSS3, Bootstrap 5 e JavaScript para promover a academia fictícia "Strongest". O projeto apresenta informações sobre a academia, planos, localização, e inclui funcionalidades como carrossel de imagens e formulário de contato. Responsiva e atrativa, a página utiliza boas práticas de design e desenvolvimento, oferecendo uma experiência fluida e adaptável, consolidando habilidades em tecnologias modernas.
+                        Landing page responsiva e moderna, desenvolvida com HTML5, CSS3, Bootstrap 5 e JavaScript, para promover a academia fictícia "Strongest". Inclui carrossel de imagens, formulário de contato e apresenta informações sobre planos e localização, destacando boas práticas de design e desenvolvimento.
                     </p>
                     <a href="https://frank1br.github.io/projetoDesign/" target="_blank"><i class='bx bx-link-external' ></i> </a> 
 
