refac: link from page

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
                     <p>
                         App em Flutter com back-end em PHP e banco de dados no MyPhpAdmin, criado para conectar fornecedores e compradores de produtos químicos. Oferece uma interface intuitiva para consultar preços, realizar pedidos e gerenciar informações, otimizando o processo de compra e venda no setor.
                     </p>
-                    <a href="https://frank1br.github.io/jQuery-Project/"><i class='bx bx-link-external' ></i> </a> 
                 </div>
             </div>
 
@@ -134,7 +133,7 @@
                     <p>
                         Aplicação web em HTML, CSS e jQuery que simula um sistema de caixa para lojas de roupas. Possui interface intuitiva, permitindo interação dinâmica com produtos e cálculo automático do valor total das compras.
                     </p>
-                    <a href="https://github.com/Frank1br/jQuery-Project" target="_blank"><i class='bx bx-link-external' ></i> </a> 
+                    <a href="https://frank1br.github.io/jQuery-Project/" target="_blank"><i class='bx bx-link-external' ></i> </a> 
 
                     
                 </div>
